--- a/alphagruis.css
+++ b/alphagruis.css
@@ -1,57 +1,35 @@
-.u-section-1 {
-  min-height: 70px;
+.u-section-1 .u-sheet-1 {
+  min-height: 351px;
 }
 
-.u-section-1 .u-line-1 {
-  transform-origin: right center 0px;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.u-section-1 .u-group-1 {
-  width: 800px;
-  min-height: 50px;
-  margin: 9px auto 10px;
-}
-
-.u-section-1 .u-container-layout-1 {
-  padding: 10px;
+.u-section-1 .u-image-1 {
+  width: 256px;
+  height: 256px;
+  animation-duration: 1000ms;
+  box-shadow: 0 0 20px 0 rgba(128,128,128,1);
+  text-shadow: 0 0 20px rgba(0,0,0,0);
+  margin: 30px auto 0;
 }
 
 .u-section-1 .u-text-1 {
   animation-duration: 1000ms;
   font-size: 1rem;
-  margin: 0 50px;
-}
-
-@media (max-width: 991px) {
-  .u-section-1 .u-group-1 {
-    width: 720px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-left: 10px;
-    margin-right: 10px;
-  }
+  width: 720px;
+  margin: 20px auto;
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-group-1 {
-    width: 540px;
-  }
-
   .u-section-1 .u-text-1 {
-    margin-left: 0;
-    margin-right: 0;
+    width: 540px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-1 .u-group-1 {
+  .u-section-1 .u-text-1 {
     width: 340px;
   }
 }.u-section-2 {
-  min-height: 262px;
+  min-height: 406px;
 }
 
 .u-section-2 .u-line-1 {
@@ -66,7 +44,7 @@
 
 .u-section-2 .u-layout-wrap-1 {
   width: 1140px;
-  margin: 21px auto;
+  margin: 20px auto 0;
 }
 
 .u-section-2 .u-layout-cell-1 {
@@ -88,10 +66,10 @@
 }
 
 .u-section-2 .u-btn-1 {
-  border-style: none none solid;
   align-self: center;
+  border-style: none;
   margin: 20px auto 0;
-  padding: 0 12px;
+  padding: 0;
 }
 
 .u-section-2 .u-layout-cell-2 {
@@ -113,9 +91,10 @@
 }
 
 .u-section-2 .u-btn-2 {
-  border-style: none none solid;
+  background-image: none;
+  border-style: none;
   margin: 20px auto 0;
-  padding: 0 39px;
+  padding: 0;
 }
 
 .u-section-2 .u-layout-cell-3 {
@@ -137,14 +116,29 @@
 }
 
 .u-section-2 .u-btn-3 {
-  border-style: none none solid;
+  border-style: none;
+  background-image: none;
   margin: 20px auto 0;
-  padding: 0 38px 0 37px;
+  padding: 0;
+}
+
+.u-section-2 .u-btn-4 {
+  background-image: none;
+  border-style: none none solid;
+  align-self: center;
+  margin: 57px auto 0;
+  padding: 0;
+}
+
+.u-section-2 .u-icon-1 {
+  width: 32px;
+  height: 32px;
+  margin: 20px auto 30px;
 }
 
 @media (max-width: 1199px) {
   .u-section-2 {
-    min-height: 223px;
+    min-height: 367px;
   }
 
   .u-section-2 .u-layout-wrap-1 {
@@ -166,7 +160,7 @@
 
 @media (max-width: 991px) {
   .u-section-2 {
-    min-height: 142px;
+    min-height: 286px;
   }
 
   .u-section-2 .u-layout-wrap-1 {
@@ -188,7 +182,7 @@
 
 @media (max-width: 767px) {
   .u-section-2 {
-    min-height: 242px;
+    min-height: 386px;
   }
 
   .u-section-2 .u-layout-wrap-1 {
