--- a/nicepage.css
+++ b/nicepage.css
@@ -35780,56 +35780,114 @@ a.u-link.u-text-hover-grey-90:hover {
 
 
 /*end-variables sitestylecss*/
-.u-header .u-sheet-1 {
-  min-height: 448px;
-}
-
-.u-header .u-group-1 {
-  width: 300px;
-  min-height: 408px;
-  animation-duration: 1000ms;
-  margin: 20px auto;
-}
-
-.u-header .u-container-layout-1 {
-  padding: 20px;
+.u-header {
+  background-image: none;
+  min-height: 90px;
 }
 
 .u-header .u-image-1 {
-  width: 256px;
-  height: 256px;
+  width: 64px;
+  height: 64px;
+  box-shadow: 0 0 10px 0 rgba(128,128,128,1);
+  text-shadow: 0 0 10px rgba(0,0,0,0);
   animation-duration: 1000ms;
-  box-shadow: 0 0 20px 0 rgba(128,128,128,1);
-  text-shadow: 0 0 20px rgba(0,0,0,0);
-  margin: 0 auto;
+  margin: 13px auto 0 calc(((100% - 1140px) / 2));
 }
 
-.u-header .u-btn-1 {
-  border-style: none none solid;
+.u-header .u-logo-image-1 {
+  width: 100%;
+  height: 100%;
+}
+
+.u-header .u-menu-1 {
+  font-family: size-14;
+  margin: -48px calc(((100% - 1140px) / 2)) 0 auto;
+}
+
+.u-header .u-nav-1 {
+  font-size: 1rem;
+}
+
+.u-header .u-sidenav-1 {
+  padding: 0;
+}
+
+.u-header .u-line-1 {
+  transform-origin: right center 0px;
+  width: calc(((100% - 1140px) / 2) + 1070px);
+  height: 1px;
+  margin: 28px 0 0 auto;
+}
+
+.u-header .u-nav-2 {
+  font-size: 1rem;
+}
+
+.u-header .u-text-1 {
+  animation-duration: 1000ms;
   font-size: 1.5rem;
-  align-self: center;
-  margin: 20px auto 0;
-  padding: 0 37px 0 36px;
+  font-weight: 700;
+  width: 200px;
+  margin: -38px auto 0;
 }
 
-.u-header .u-icon-1 {
-  width: 32px;
-  height: 32px;
-  background-image: none;
-  margin: 20px auto 0;
+.u-header .u-line-1 {
+  transform-origin: right center 0px;
+  width: calc(((100% - 1140px) / 2) + 1070px);
+  height: 1px;
+  margin: 28px 0 0 auto;
 }
+@media (max-width: 1199px) {
+  .u-header .u-image-1 {
+    margin-left: calc(((100% - 940px) / 2));
+  }
 
+  .u-header .u-menu-1 {
+    margin-right: calc(((100% - 940px) / 2));
+  }
 
-@media (max-width: 767px) {
-  .u-header .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
+  .u-header .u-line-1 {
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-header .u-line-1 {
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 }
+@media (max-width: 991px) {
+  .u-header .u-image-1 {
+    margin-left: calc(((100% - 720px) / 2));
+  }
 
+  .u-header .u-menu-1 {
+    margin-right: calc(((100% - 720px) / 2));
+  }
+}
+@media (max-width: 767px) {
+  .u-header .u-image-1 {
+    margin-left: calc(((100% - 540px) / 2));
+  }
+
+  .u-header .u-menu-1 {
+    margin-right: calc(((100% - 540px) / 2));
+  }
+}
+@media (max-width: 575px) {
+  .u-header .u-image-1 {
+    margin-left: calc(((100% - 340px) / 2));
+  }
+
+  .u-header .u-menu-1 {
+    margin-right: calc(((100% - 340px) / 2));
+  }
+}
 .u-footer {
   background-image: none;
-  min-height: 70px;
+  min-height: 63px;
 }
 
 .u-footer .u-line-1 {
@@ -35840,9 +35898,9 @@ a.u-link.u-text-hover-grey-90:hover {
 
 .u-footer .u-text-1 {
   animation-duration: 1000ms;
-  width: 850px;
   font-size: 0.875rem;
-  margin: 25px auto 26px;
+  width: 850px;
+  margin: 20px auto 0;
 }
 
 @media (max-width: 991px) {
